# svelte-jupyter-widget-example

./: .coveragerc  .gitignore  MANIFEST.in  README.md  codecov.yml  install.json  package.json  pyproject.toml  pytest.ini  svelte_widget.json  webpack.config.js
.github/workflows/: build.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/examples/: introduction.nblink
examples/: example.ipynb
src/: extension.ts  plugin.ts  stores.ts  widget.ts
src/components/: Widget.svelte
svelte_widget/: __init__.py  _frontend.py  example.py
svelte_widget/nbextension/: extension.js
